<resources>
    <string name="app_name">WeCare</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="marked_location">Marked Location</string>
    <string name="poi">poi</string>
    //Google map API key. allow this app to use google services (firebase,maps,directions)
    <string name="google_map_API_key">AIzaSyAnuFUlU0daxnK6T13Hlb1yQ_aqWEnLnqc</string>

    <!-- Sign Up Page -->
    <string name="hintText_email"><font size="16">wecare@example.com</font></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="create_an_account_by_filling_the_info_below">Create an account by filling the info below</string>
    <string name="email">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_map">What are you looking for?</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="caregiver">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <!-- Settings Page -->
    <string name="paragraph">We Care is here to take the chance out of going out. We care will provide you the information and detail that you need to work out if a place is going to be accessible to you.</string>
    <string name="contact">Contact Us</string>
    <string name="name">We Care</string>
    <string name="title">General</string>


</resources>