<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpPage1"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F4FFFD"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/createAccount_page1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/descritionCreateAccount_page1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_an_account_by_filling_the_info_below"
            android:textColor="#808080"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createAccount_page1" />

        <TextView
            android:id="@+id/email_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/molengo"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/descritionCreateAccount_page1"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/email"
            android:layout_width="@dimen/signUp_layoutWidth"
            android:layout_height="@dimen/signUp_layoutHeight"
            android:layout_marginTop="64dp"
            android:background="@drawable/signup_border"
            android:ellipsize="middle"
            android:hint="@string/hintText_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descritionCreateAccount_page1" />

        <TextView
            android:id="@+id/password_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/molengo"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="@dimen/signUp_layoutWidth"
            android:layout_height="@dimen/signUp_layoutHeight"
            android:background="@drawable/signup_border"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_display" />

        <TextView
            android:id="@+id/confirmpassword_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/molengo"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="18dp"
            app:layout_constraintStart_toStartOf="@+id/confirm_password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="@dimen/signUp_layoutWidth"
            android:layout_height="@dimen/signUp_layoutHeight"
            android:background="@drawable/signup_border"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmpassword_display" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_nextPage1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:layout_marginBottom="48dp"
            android:background="#15A483"
            android:clickable="true"
            android:src="@drawable/ic_signup_nextarrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>